src/objects/Apponment__c.object
<CustomObject>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Appointment</relationshipLabel>
        <relationshipName>DoctorAppointment</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Appointment</relationshipLabel>
        <relationshipName>Appointment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>DateTime</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>App-{000}</displayFormat>
        <label>ApponmentID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>